_generated-doc/3.8/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc

:summaryTableId: quarkus-smallrye-graphql-small-rye-graph-ql-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-graphql-small-rye-graph-ql-config_configuration]]link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-root-path]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-root-path[quarkus.smallrye-graphql.root-path]`


[.description]
--
The rootPath under which queries will be served. Default to graphql By default, this value will be resolved as a path relative to `$++{++quarkus.http.root-path++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`graphql`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-federation-enabled]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-federation-enabled[quarkus.smallrye-graphql.federation.enabled]`


[.description]
--
Enable Apollo Federation. If this value is unspecified, then federation will be enabled automatically if any GraphQL Federation annotations are detected in the application.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_FEDERATION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_FEDERATION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-federation-batch-resolving-enabled]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-federation-batch-resolving-enabled[quarkus.smallrye-graphql.federation.batch-resolving-enabled]`


[.description]
--
Enable batch resolving for federation. Disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_FEDERATION_BATCH_RESOLVING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_FEDERATION_BATCH_RESOLVING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-metrics-enabled]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-metrics-enabled[quarkus.smallrye-graphql.metrics.enabled]`


[.description]
--
Enable metrics. By default, this is false. If set to true, a metrics extension is required.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-tracing-enabled]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-tracing-enabled[quarkus.smallrye-graphql.tracing.enabled]`


[.description]
--
Enable tracing. By default, this will be enabled if the tracing extension is added.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_TRACING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_TRACING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-events-enabled]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-events-enabled[quarkus.smallrye-graphql.events.enabled]`


[.description]
--
Enable eventing. Allow you to receive events on bootstrap and execution.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_EVENTS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_EVENTS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-nonblocking-enabled]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-nonblocking-enabled[quarkus.smallrye-graphql.nonblocking.enabled]`


[.description]
--
Enable non-blocking support. Default is true.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_NONBLOCKING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_NONBLOCKING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-http-get-enabled]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-http-get-enabled[quarkus.smallrye-graphql.http.get.enabled]`


[.description]
--
Enable GET Requests. Allow queries via HTTP GET.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_HTTP_GET_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_HTTP_GET_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-http-post-queryparameters-enabled]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-http-post-queryparameters-enabled[quarkus.smallrye-graphql.http.post.queryparameters.enabled]`


[.description]
--
Enable Query parameter on POST Requests. Allow POST request to override or supply values in a query parameter.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_HTTP_POST_QUERYPARAMETERS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_HTTP_POST_QUERYPARAMETERS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-auto-name-strategy]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-auto-name-strategy[quarkus.smallrye-graphql.auto-name-strategy]`


[.description]
--
Change the type naming strategy. All possible strategies are: default, merge-inner-class, full

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_AUTO_NAME_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_AUTO_NAME_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`Default`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-error-extension-fields]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-error-extension-fields[quarkus.smallrye-graphql.error-extension-fields]`


[.description]
--
List of extension fields that should be included in the error response. By default, none will be included. Examples of valid values include ++[++exception,classification,code,description,validationErrorType,queryPath++]++

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_ERROR_EXTENSION_FIELDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_ERROR_EXTENSION_FIELDS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-show-runtime-exception-message]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-show-runtime-exception-message[quarkus.smallrye-graphql.show-runtime-exception-message]`


[.description]
--
List of Runtime Exceptions class names that should show the error message. By default, Runtime Exception messages will be hidden and a generic `Server Error` message will be returned.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SHOW_RUNTIME_EXCEPTION_MESSAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SHOW_RUNTIME_EXCEPTION_MESSAGE+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-hide-checked-exception-message]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-hide-checked-exception-message[quarkus.smallrye-graphql.hide-checked-exception-message]`


[.description]
--
List of Checked Exceptions class names that should hide the error message. By default, Checked Exception messages will show the exception message.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_HIDE_CHECKED_EXCEPTION_MESSAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_HIDE_CHECKED_EXCEPTION_MESSAGE+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-default-error-message]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-default-error-message[quarkus.smallrye-graphql.default-error-message]`


[.description]
--
The default error message that will be used for hidden exception messages. Defaults to "Server Error"

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_DEFAULT_ERROR_MESSAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_DEFAULT_ERROR_MESSAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-print-data-fetcher-exception]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-print-data-fetcher-exception[quarkus.smallrye-graphql.print-data-fetcher-exception]`


[.description]
--
Print the data fetcher exception to the log file. Default `true` in dev and test mode, default `false` in prod.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PRINT_DATA_FETCHER_EXCEPTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PRINT_DATA_FETCHER_EXCEPTION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-schema-available]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-schema-available[quarkus.smallrye-graphql.schema-available]`


[.description]
--
Make the schema available over HTTP.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_AVAILABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_AVAILABLE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-schema-include-scalars]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-schema-include-scalars[quarkus.smallrye-graphql.schema-include-scalars]`


[.description]
--
Include the Scalar definitions in the schema.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_SCALARS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_SCALARS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-schema-include-schema-definition]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-schema-include-schema-definition[quarkus.smallrye-graphql.schema-include-schema-definition]`


[.description]
--
Include the schema internal definition in the schema.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_SCHEMA_DEFINITION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_SCHEMA_DEFINITION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-schema-include-directives]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-schema-include-directives[quarkus.smallrye-graphql.schema-include-directives]`


[.description]
--
Include Directives in the schema.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_DIRECTIVES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_DIRECTIVES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-schema-include-introspection-types]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-schema-include-introspection-types[quarkus.smallrye-graphql.schema-include-introspection-types]`


[.description]
--
Include Introspection Types in the schema.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_INTROSPECTION_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_SCHEMA_INCLUDE_INTROSPECTION_TYPES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-log-payload]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-log-payload[quarkus.smallrye-graphql.log-payload]`


[.description]
--
Log the payload (and optionally variables) to System out.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_LOG_PAYLOAD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_LOG_PAYLOAD+++`
endif::add-copy-button-to-env-var[]
-- a|
`off`, `query-only`, `query-and-variables` 
|`off`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-field-visibility]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-field-visibility[quarkus.smallrye-graphql.field-visibility]`


[.description]
--
Set the Field visibility.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_FIELD_VISIBILITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_FIELD_VISIBILITY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`default`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-unwrap-exceptions]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-unwrap-exceptions[quarkus.smallrye-graphql.unwrap-exceptions]`


[.description]
--
Exceptions that should be unwrapped (class names).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_UNWRAP_EXCEPTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_UNWRAP_EXCEPTIONS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-websocket-subprotocols]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-websocket-subprotocols[quarkus.smallrye-graphql.websocket-subprotocols]`


[.description]
--
Subprotocols that should be supported by the server for graphql-over-websocket use cases. Allowed subprotocols are "graphql-ws" and "graphql-transport-ws". By default, both are enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_WEBSOCKET_SUBPROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_WEBSOCKET_SUBPROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-parser-capture-ignored-chars]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-parser-capture-ignored-chars[quarkus.smallrye-graphql.parser-capture-ignored-chars]`


[.description]
--
Set to true if ignored chars should be captured as AST nodes. Default to false

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_IGNORED_CHARS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_IGNORED_CHARS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-parser-capture-line-comments]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-parser-capture-line-comments[quarkus.smallrye-graphql.parser-capture-line-comments]`


[.description]
--
Set to true if `graphql.language.Comment`s should be captured as AST nodes

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_LINE_COMMENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_LINE_COMMENTS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-parser-capture-source-location]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-parser-capture-source-location[quarkus.smallrye-graphql.parser-capture-source-location]`


[.description]
--
Set to true true if `graphql.language.SourceLocation`s should be captured as AST nodes. Default to true

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_SOURCE_LOCATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_CAPTURE_SOURCE_LOCATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-parser-max-tokens]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-parser-max-tokens[quarkus.smallrye-graphql.parser-max-tokens]`


[.description]
--
The maximum number of raw tokens the parser will accept, after which an exception will be thrown. Default to 15000

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_MAX_TOKENS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_MAX_TOKENS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-parser-max-whitespace-tokens]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-parser-max-whitespace-tokens[quarkus.smallrye-graphql.parser-max-whitespace-tokens]`


[.description]
--
The maximum number of raw whitespace tokens the parser will accept, after which an exception will be thrown. Default to 200000

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_MAX_WHITESPACE_TOKENS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_PARSER_MAX_WHITESPACE_TOKENS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-instrumentation-query-complexity]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-instrumentation-query-complexity[quarkus.smallrye-graphql.instrumentation-query-complexity]`


[.description]
--
Abort a query if the total number of data fields queried exceeds the defined limit. Default to no limit

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_INSTRUMENTATION_QUERY_COMPLEXITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_INSTRUMENTATION_QUERY_COMPLEXITY+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-instrumentation-query-depth]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-instrumentation-query-depth[quarkus.smallrye-graphql.instrumentation-query-depth]`


[.description]
--
Abort a query if the total depth of the query exceeds the defined limit. Default to no limit

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_INSTRUMENTATION_QUERY_DEPTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_INSTRUMENTATION_QUERY_DEPTH+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-extra-scalars]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-extra-scalars[quarkus.smallrye-graphql.extra-scalars]`


[.description]
--
Additional scalars to register in the schema. These are taken from the `graphql-java-extended-scalars` library.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_EXTRA_SCALARS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_EXTRA_SCALARS+++`
endif::add-copy-button-to-env-var[]
--|list of ExtraScalar 
|


h|[[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-ui-smallrye-graphql-ui-configuration]]link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-ui-smallrye-graphql-ui-configuration[SmallRye GraphQL UI configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-ui-root-path]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-ui-root-path[quarkus.smallrye-graphql.ui.root-path]`


[.description]
--
The path where GraphQL UI is available. The value `/` is not allowed as it blocks the application from serving anything else. By default, this URL will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_UI_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_UI_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`graphql-ui`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-ui-always-include]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus-smallrye-graphql-ui-always-include[quarkus.smallrye-graphql.ui.always-include]`


[.description]
--
Always include the UI. By default, this will only be included in dev and test. Setting this to true will also include the UI in Prod

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_UI_ALWAYS_INCLUDE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_UI_ALWAYS_INCLUDE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===